# penra_uploader

./: .gitignore  AGENT.md  CRATE_EXTRACTION.md  REPORT_TEMPLATES.md  anon.py  anon_gui.py  anon_gui.spec  anonymiser.py  build.py  config.py  local_file_picker.py  local_folder_picker.py  nice.py  nice_uploader.spec  requirements.txt  reslice.py  setup.py  socket_helpers.py  sortList.py  wxDicomViewer.py
.github/workflows/: build-windows.yml  launcher_build.yml  main.yml
dicom-view/: Cargo.toml
dicom-view/src/: lib.rs  main.rs
dicom_viewer/: Cargo.toml
dicom_viewer/src/: lib.rs
dicor-rs/: Cargo.toml
dicor-rs/src/: lib.rs
dicor-rs/tests/: anonymize_additional.rs  anonymize_burned_in.rs  anonymize_device_software.rs  anonymize_non_dicom.rs  anonymize_one_patient_two_studies.rs  anonymize_one_series_two_instances.rs  anonymize_overlays_annotations.rs  anonymize_phi_scan.rs  anonymize_private_tags.rs  anonymize_safe_private.rs  anonymize_sequence_phi.rs  anonymize_single_instance.rs  anonymize_tags.rs  anonymize_through_time.rs
diforge-rs/: Cargo.toml  PREDICTIVE_TEXT.md  REPORT_TEMPLATES.md  build.rs
diforge-rs/src/: dragon_ipc.rs  hun_wrapper.rs  main.rs  selection_tests.rs  speech.rs  templates.rs  vim.rs
diforge-rs/templates/project/: block_clinical.yml  chest_xr_basic.yaml  ct_head_trauma_v1.yaml  inline_time.yml
diforge-rs/templates/user/: inline_sig.yml  inline_signature.yml
diviz-rs/: Cargo.toml
diviz-rs/src/: lib.rs  main.rs
divue-rs/: Cargo.toml  IMPLEMENTATION.md  INTERACTIVE.md  TESTS.md
divue-rs/src/: lib.rs  main.rs
divue-rs/tests/: filter_tests.rs  key_union_tests.rs  string_truncation_tests.rs  value_comparison_tests.rs
icon/: icon1.jfif  icon2.jfif
launcher/: Cargo.toml
launcher/src/: main.rs
meta_viewer/: Cargo.toml
meta_viewer/src/: main.rs
scripts/: anonymize_batch.py  anonymize_dir.py  compare_anonymizers.py  simulate_exporter.py
templates/project/: ct_abdomen_full.yml  ct_head_full.yml  findings.yml  header.yml  impression.yml  inline_time.yml
templates/user/: inline_sig.yml  user_note.txt
uploader_rs/: .last_scan.json  Cargo.toml  build.rs
uploader_rs/src/: anonymizer.rs  assets.rs  dicom_viewer.rs  install.rs  main.rs  meta_viewer.rs  processing_workflow_tests.rs  upload.rs
uploader_rs/src/main/: tests.rs
uploader_rs/src/upload/: tests.rs
uploader_rs/tests/: anonymizer_tests.rs
