[package]
name = "dicor-rs"
version = "0.1.0"
edition = "2021"

[lib]
name = "dicor_rs"
path = "src/lib.rs"

[dependencies]
dicom-object = "0.6"
dicom-core = "0.6"
blake3 = "1.4"
chrono = { version = "0.4", features = ["serde"] }
num-bigint = "0.4"
hex = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dicom-dictionary-std = "0.6"

[dev-dependencies]
tempfile = "3"