[package]
name = "diviz-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = "0.33"
egui = "0.33"
dicom-object = "0.9"
dicom-core = "0.9"
dicom-pixeldata = "0.9"
rfd = "0.17"
rayon = "1.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
directories = "5.0"

[[bin]]
name = "diviz-rs"
path = "src/main.rs"

[lib]
name = "diviz_rs_app"
path = "src/lib.rs"
