[package]
name = "divue-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = "0.33"
egui = "0.33"
egui_extras = "0.33"
dicom_viewer = { path = "../dicom_viewer" }
dicom-core = "0.9"
dicom-dictionary-std = "0.9"
rfd = "0.17"
dicor_rs = { package = "dicor-rs", path = "../dicor-rs" }

[[bin]]
name = "divue"
path = "src/main.rs"

[lib]
name = "divue_rs"
path = "src/lib.rs"
