[package]
name = "uploader_rs"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
eframe = "0.33"
egui = "0.33"
nng = "1.0.1" # Keeping nng for now
fs2 = "0.4"
interprocess = "1.1"
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.11", default-features = false, features = ["blocking", "json", "rustls-tls", "multipart"] }
blake3 = "1.4"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
rfd = "0.17"
chrono = { version = "0.4", features = ["serde"] }
num-bigint = "0.4"
hex = "0.4"
serde_json = "1.0"
dirs = "4.0"
rayon = "1.7"
num_cpus = "1.16"
once_cell = "1.20"
base64 = "0.21"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
tracing-appender = "0.2"
image = "0.24"

# local crates
dicor_rs = { package = "dicor-rs", path = "../dicor-rs" }
dicom_viewer = { path = "../dicom_viewer" }
divue_rs = { package = "divue-rs", path = "../divue-rs" }
dicom-pixeldata = "0.9"
dicom-object = "0.9"

[dev-dependencies]
tempfile = "3.6"
httpmock = "0.6"
dicom-core = "0.9"
